# Armagesta

./: BackgroundMusicManager.h  CMakeLists.txt  Encounter.cpp  Encounter.h  Event.h  EventDatabase.h  Events.h  MonsterCalling.h  PlayerDatabase.h  main.cpp  randomness.h  rulesForImplementation.h
